welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:17: error: not found: value j
      else {for (j <- 0 to diag-1-j){
                                  ^